[package]
name = "wave-simulator"
version = "0.1.0"
authors = ["Lonsdaleiter <lonsdaleiteproductions@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cull-canyon = { git = "https://github.com/Lonsdaleiter/cull-canyon" }
winit = "0.22.1"
